--- a/app/src/main/res/menu/chat_menu.xml
+++ b/app/src/main/res/menu/chat_menu.xml
@@ -4,4 +4,7 @@
     <item android:id="@+id/action_exit"
         android:title="Exit"
         app:showAsAction="never"/>
+    <item android:id="@+id/action_model_select"
+        android:title="Select model"
+        app:showAsAction="never"/>
 </menu>
